--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+/public/assets
+
 # Compiled output
 /dist
 /tmp
